[gd_scene load_steps=2 format=3 uid="uid://ew4cs3o4boh4"]

[ext_resource type="Script" uid="uid://b1cdv8vod2myy" path="res://Prototype_presentation_8.05.2025/Pause_menu.gd" id="1_ux56m"]

[node name="Pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ux56m")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -77.0
offset_right = 73.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Button4" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
